# tg_home_sensors

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.db.yml  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 20260131_1400_initial.py  20260217_2100_sensor_readings.py
nginx/: mcp.conf
sketch/: sketch.ino
specs/001-arduino-sensor-monitoring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-arduino-sensor-monitoring/checklists/: requirements.md
specs/001-arduino-sensor-monitoring/contracts/: bot-commands.md
src/: __init__.py  config.py  main.py
src/bot/handlers/: __init__.py  sensors.py  settings.py  start.py
src/bot/models/: alert_state.py  db.py  sensor_reading.py  serial_connection.py  user.py
src/bot/services/: alert_manager.py  data_parser.py  database.py  sensor_history.py  (+2 more)
src/mcp/: __init__.py  auth.py  main.py  server.py
tests/: conftest.py
tests/fixtures/: telegram_mocks.py
tests/integration/: test_alert_flow.py  test_help_handler.py  test_mcp_server.py  test_sensors_handler.py  test_settings_handler.py  test_start_handler.py
tests/unit/: test_alert_manager.py  test_config.py  test_data_parser.py  test_database.py  test_mcp_auth.py  test_mcp_server_factory.py  test_mcp_tools.py  test_models.py  test_sensor_history_service.py  test_serial_reader.py  test_user_settings.py
(+3 files in other folders)
